<resources>
    <string name="app_name">Smart Aqua</string>
    <string name="hint_localDomain">192.168.0.100</string>
    <string name="hint_port">80</string>
    <string name="ip_domain">IP/Domain:</string>
    <string name="local_network">Local Network</string>
    <string name="port">Port</string>
    <string name="remote_server">Remote Server</string>
    <string name="_80">80</string>
    <string name="demo_com">demo.com</string>
    <string name="save">Save</string>
    <string name="add_remote_server_settings">Add Remote Server Settings</string>
    <string name="initialTemp">0 °C</string>
    <string name="cpu">CPU:</string>
    <string name="gpu">GPU:</string>
    <string name="go_back">GO Back</string>
    <string name="label_waterTemperature">Water Temperature:</string>
    <string name="label_waterFilter">Water Filter</string>
    <string name="settings">Settings</string>
    <string name="schedule">Schedule</string>
    <string name="air_pump">Air Pump</string>
    <string name="day_light">Day Light</string>
    <string name="night_light">Night Light</string>
    <string name="connection">connection</string>
    <string name="more">⋮</string>
    <string name="menu">menu</string>
    <string name="confirm">Confirm</string>
    <string name="off_duration">OFF Duration:</string>
    <string name="on_duration">ON Duration:</string>
    <string name="minutes">minutes</string>
    <string name="delete">Delete</string>
    <string name="refresh">Refresh</string>
    <string name="string_refresh" />
    <string name="defaultOn">18:00</string>
    <string name="modify">Modify</string>
    <string name="off_time">OFF Time:</string>
    <string name="on_time">ON Time:</string>
    <string name="schedule_1">Schedule #1</string>
    <string name="defaultOff">6:00</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="no_schedule">No Schedules</string>
    <string name="blank_time">--:--</string>
    <string name="off">OFF:</string>
    <string name="on">ON:</string>
    <string name="set_time">Set Time</string>
    <string name="lightScheduleHeading">Light Schedule Settings</string>
    <string name="enable_temperature_alerts">Enable Temperature Alerts</string>
    <string name="maximum">Maximum:</string>
    <string name="minimum">Minimum:</string>
    <string name="water_temperature">Water Temperature</string>
    <string name="system_temperature">System Temperature</string>
    <string name="celsius"> °C</string>
    <string name="notifications">Notifications</string>
    <string name="title_activity_notification_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>

