<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical"
    android:layout_marginBottom="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scheduleID"
        android:visibility="gone" />

    <TextView
        android:text="@string/schedule_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scheduleHeading"
        android:layout_centerHorizontal="true"
        android:textSize="22sp" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/scheduleHeading"
        android:layout_marginTop="5dp"
        android:id="@+id/scheduleTable">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/onRow">

            <TextView
                android:text="@string/on_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/onTimeLabel"
                android:textSize="20sp"
                android:textAlignment="textEnd"
                android:labelFor="@+id/editScheduleOn" />

            <TextView
                android:text="@string/defaultOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/scheduleOn"
                android:textSize="28sp"
                android:textAlignment="center"
                android:layout_marginStart="20dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/offRow"
            android:layout_marginTop="10dp">

            <TextView
                android:text="@string/off_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/offTimeLabel"
                android:textSize="20sp"
                android:textAlignment="textEnd"
                android:labelFor="@+id/editScheduleOff" />

            <TextView
                android:text="@string/defaultOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/scheduleOff"
                android:textSize="28sp"
                android:textAlignment="center"
                android:layout_marginStart="20dp" />

        </TableRow>
    </TableLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/scheduleTable"
        android:layout_marginTop="10dp">

        <Button
            android:text="@string/modify"
            android:id="@+id/modifySchedule"
            android:layout_weight="1"
            android:textSize="18sp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:text="@string/delete"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:id="@+id/deleteSchedule"
            android:layout_weight="1"
            android:textSize="18sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</RelativeLayout>
