<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pump_scheduler"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:stretchColumns="0,1"
    android:id="@+id/table"
    >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp">

        <TextView
            android:text="@string/on_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/onDurationText"
            android:layout_gravity="center"
            android:textSize="17sp" />

        <EditText
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/onDuration"
            android:layout_gravity="center|end"
            android:maxLength="2"
            android:layout_width="10dp"
            tools:ignore="LabelFor" />

        <TextView
            android:text="@string/minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:id="@+id/onMinutesText"
            android:textSize="17sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:id="@+id/offRow">

        <TextView
            android:text="@string/off_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="17sp" />

        <EditText
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/offDuration"
            android:layout_gravity="center|end"
            android:layout_width="10dp"
            tools:ignore="LabelFor"
            android:maxLength="2" />

        <TextView
            android:text="@string/minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/offMinutesText"
            android:layout_gravity="center|end"
            android:textSize="17sp" />

    </TableRow>
</TableLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/table"
        android:layout_centerHorizontal="true"
        android:animateLayoutChanges="true"

        >

        <Button
            android:text="@string/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/confirm"

            android:textSize="17sp"
            android:layout_weight="1"
            />

        <Button
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/delete"

            android:textSize="17sp"
            android:layout_weight="1"
            android:visibility="gone" />
    </LinearLayout>

</RelativeLayout>